# coduchi

./: .gitignore  Cargo.toml
.cursor/rules/: codebase-structure.md  specification.md
.devcontainer/: compose.yaml  devcontainer.json
src/: cli.rs  error.rs  generator.rs  lib.rs  main.rs  template.rs
src/application/: mod.rs
src/application/services/: app_service.rs  mod.rs
src/application/use_cases/: generate_devcontainer.rs  mod.rs
src/domain/: mod.rs
src/domain/models/: config.rs  file.rs  mod.rs  template.rs
src/domain/ports/: file_repository.rs  mod.rs  template_repository.rs  user_interaction.rs
src/domain/services/: generator.rs  mod.rs
src/infrastructure/: mod.rs
src/infrastructure/repositories/: filesystem_repository.rs  github_template_repository.rs  mod.rs
src/infrastructure/ui/: cli_user_interaction.rs  console_progress_reporter.rs  mod.rs
src/presentation/: cli.rs  container.rs  mod.rs
