[package]
name = "coduchi"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "VSCode Dev Containerの設定ファイルを自動生成するCLIツール"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
inquire = "0.6"
colored = "2.1"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
mockito = "1.7.0"
tempfile = "3.10" 